The times they are a-changing.

--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -181,6 +181,9 @@
     <ClCompile Include="test.cpp" />
     <ClCompile Include="vm.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ir.mxx" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
