--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj.filters
@@ -261,4 +261,9 @@
       <Filter>源文件\backend\optimize</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ir.mxx">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
