--- a/MxCompiler/MxCompiler/MxCompiler.vcxproj
+++ b/MxCompiler/MxCompiler/MxCompiler.vcxproj
@@ -123,11 +123,13 @@
     <ClInclude Include="configuration.h" />
     <ClInclude Include="cfg_pass.h" />
     <ClInclude Include="ConstantExpressionEvaluation.h" />
+    <ClInclude Include="CSE.h" />
     <ClInclude Include="dead_code_elimination.h" />
     <ClInclude Include="dominance.h" />
     <ClInclude Include="environment.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="exprHelper.h" />
+    <ClInclude Include="functionInliner.h" />
     <ClInclude Include="GlobalFuncAndClsDecl.h" />
     <ClInclude Include="globalvarResolver.h" />
     <ClInclude Include="instructionSelector.h" />
@@ -167,10 +169,12 @@
     <ClCompile Include="cfg_pass.cpp" />
     <ClCompile Include="ClassDeclVisitor.cpp" />
     <ClCompile Include="ConstantExpressionEvaluation.cpp" />
+    <ClCompile Include="CSE.cpp" />
     <ClCompile Include="dead_code_elimination.cpp" />
     <ClCompile Include="dominance.cpp" />
     <ClCompile Include="environment.cpp" />
     <ClCompile Include="Function.cpp" />
+    <ClCompile Include="functionInliner.cpp" />
     <ClCompile Include="GlobalFuncDeclVistor.cpp" />
     <ClCompile Include="globalvarResolver.cpp" />
     <ClCompile Include="instructionSelector.cpp" />
